[gd_scene load_steps=2 format=3 uid="uid://c3evolution_option"]

[ext_resource type="Script" path="res://Player/GUI/evolution_option.gd" id="1_option"]

[node name="EvolutionOption" type="PanelContainer"]
custom_minimum_size = Vector2(180, 250)
script = ExtResource("1_option")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Evolution Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Description text here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "400 Gold"
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Evolve!"

[node name="LockedOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.5)
mouse_filter = 2
